--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dotdotdot": "^1.3.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
