--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run create-redirecs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "create-redirecs": "echo \"/*    /index.html   200\" > build/_redirects"
   },
   "eslintConfig": {
     "extends": "react-app"
