--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "evergreen-ui": "^4.21.5",
     "firebase": "^6.3.1",
     "lodash": "^4.17.15",
