--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "build": "react-scripts build && npm run create-redirecs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "create-redirecs": "echo \"/*    /index.html   200\" > build/_redirects"
+    "create-redirecs": "echo \"/*    /index.html   200\" > build/_redirects",
+    "storybook": "start-storybook -p 9009 -s public --ci",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "eslint-config-react-app": "^4.0.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
