--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.22.3",
+    "@blueprintjs/select": "^3.11.2",
     "animate.css": "^3.7.2",
     "evergreen-ui": "^4.21.5",
     "firebase": "^6.3.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
-    "polished": "^3.4.1",
+    "polished": "^3.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dotdotdot": "^1.3.1",
